[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elefan"
version = "0.1.0"
description = "Elefan pin code generation for Igloo Home devices"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Elefan", email = "contact@lelefan.org"}
]
dependencies = [
    "requests>=2.28.0",
    "python-dotenv>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py38"
